--- a/index.html
+++ b/index.html
@@ -54,16 +54,20 @@ referrerpolicy="no-referrer"
                         <a href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about">About Us</a>
+                        <a href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#course">Courses</a>
+                        <a href="#">Courses</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="#blog" class="dropbtn">Free-Test</a>
+                        <ul class="dropdown-content">
+                            <li><a href="#test1">Test-Papers</a></li>
+                            <li><a href="#test2">Resources</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#blog">Free-Test</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#contact">Contact Us</a>
+                        <a href="#">Contact Us</a>
                     </li>
                 </ul>
 
@@ -472,7 +476,7 @@ referrerpolicy="no-referrer"
             <div class="footer-grid" data-aos="fade-up">
                 <div class="grid-item">
                     <div class="footer-logo">
-                        <img src="./img/logo-footer.png" alt="alpha97 logo white">
+                        <img src="./logo.png" alt="Mock-Sparrow" ><h1>Mock-Sparrow</h1>
                     </div>
                     <p class="footer-text">
                         Lorem ipsum dolor sit, amet consectetur adipiscing elit, nam rhoncus. In parturient scelerisque curabitur 
@@ -510,7 +514,7 @@ referrerpolicy="no-referrer"
                     </li>
 
                     <li class="list-item">
-                        <a href="#blog">Blog</a>
+                        <a href="#blog">Free</a>
                     </li>
 
                     <li class="list-item">
@@ -542,7 +546,7 @@ referrerpolicy="no-referrer"
                 </ul>
 
                 <div class="grid-item">
-                    <h4 class="item-heading">Subscribe Now</h4>
+                    <h4 class="item-heading">Mail-us</h4>
                     <div class="wrapper">
                         <input type="text" name="subscribe" placeholder="Email Address">
                         <button class="send-btn">
@@ -553,9 +557,8 @@ referrerpolicy="no-referrer"
             </div>
 
             <p class="copyright">
-                Copyright © 2022-23 Muhammad Usama (Alpha97). All rights reserved. 
-                <a href="https://www.linkedin.com/in/usamaweb/">LINKEDIN</a> 
-                <a href="https://github.com/usamaweb">GITHUB</a>
+                Copyright © 2022-23 Mock-Sparrow. All rights reserved. 
+               
             </p>
         </footer>
 
