--- a/index.html
+++ b/index.html
@@ -46,32 +46,33 @@ referrerpolicy="no-referrer"
         <header>
             <nav class="navbar">
                 <div class="navbar-brand">
-                    <img src="./logo.png" alt="Alpha97 Logo">
+                 <a href="#"><img src="./logo.png" alt="Alpha97 Logo"></a>
                 </div>
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#home">Home</a>
+                        <a href="https://classplusapp.com/diy/preview?templateId=666c0486c742560013402612&pageId=666c0486c742560013402637">Class</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">About Us</a>
+                        <a href="https://classplusapp.com/diy/preview?templateId=666c0486c742560013402612&pageId=666c0486c742560013402678">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a href="#">Courses</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#blog" class="dropbtn">Free-Test</a>
+                        <a href="#" class="dropbtn">Free-Test</a>
                         <ul class="dropdown-content">
-                            <li><a href="#test1">Test-Papers</a></li>
-                            <li><a href="#test2">Resources</a></li>
+                            <li><a href="https://classplusapp.com/diy/preview?templateId=666c0486c742560013402612&pageId=666c0486c7425600134026ae">Test-Papers</a></li>
+                            <li><a href="https://classplusapp.com/diy/preview?templateId=666c0486c742560013402612&pageId=666c0486c7425600134026ae">Resources</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Contact Us</a>
+                        <a href="https://classplusapp.com/diy/preview?templateId=666c0486c742560013402612&pageId=666c0486c742560013402701">Contact Us</a>
                     </li>
                 </ul>
 
-                <button class="btn btn-primary">
+
+                <button class="btn btn-primary" onclick="window.location.href='https://web.classplusapp.com/login?orgCode=ajsnls';">
                     <p class="btn-text">Login</p>
                     <span class="square"></span>
                 </button>
@@ -133,11 +134,12 @@ referrerpolicy="no-referrer"
             <div class="home-right">
                 <div class="img-box">
                     <img src="./img/about-img-bg.png" alt="colorful background shape" class="background-shape">
-                    <img src="./img/banner-img.png" alt="banner image" class="banner-img">
-
-                    <img src="./img/banner-aliment-icon-1.png" alt="" class="icon-1 smooth-zigzag-anim-1" width="250">
+                    <video src="./anime/Boy Giving Online Test(1).mp4" class="banner-img"  autoplay muted loop>
+                        Your browser does not support the video tag.
+                      </video>
+                    <img src="./img/banner-aliment-icon-1.png" alt="" class="icon-1 smooth-zigzag-anim-1" width="240">
                     <img src="./img/banner-aliment-icon-2.png" alt="" class="icon-2 smooth-zigzag-anim-2" width="240">
-                    <img src="./img/banner-aliment-icon-3.png" alt="" class="icon-3 smooth-zigzag-anim-3" width="195">
+                    <img src="./img/banner-aliment-icon-1.png" alt="" class="icon-3 smooth-zigzag-anim-3" width="195">
                     <img src="./img/banner-aliment-icon-4.png" alt="" class="icon-4 drop-anim">
 
                 </div>
@@ -236,7 +238,9 @@ referrerpolicy="no-referrer"
             <div class="about-left">
                 <div class="img-box">
                     <img src="./img/about-img-bg.png" alt="about bg" class="about-bg">
-                    <img src="./img/about-img.png" alt="about person" class="about-img">
+                    <video src="./anime/Online class.mp4" class="about-img"  autoplay muted loop>
+                        Your browser does not support the video tag.
+                      </video>
                     <img src="./img/banner-aliment-icon-1.png" alt="" class="icon-1 smooth-zigzag-anim-1" width="250">
                     <img src="./img/banner-aliment-icon-3.png" alt="" class="icon-2 smooth-zigzag-anim-3" width="195">
                 </div>
@@ -325,9 +329,9 @@ referrerpolicy="no-referrer"
                 </ul>
             </div>
 
-            <div class="features-right">
-                <img src="./img/coure-features-img.jpg" alt="core features">
-            </div>
+            
+               <video src="./anime/Online Test.mp4" class="core-features-video" autoplay muted loop></video>
+            
         </section>
 
         <!------------------- FAQ SECTION ------------------->
